feat(search): pinpoint aggregated search with per-stack results
Search stopped at the first engine that returned anything and nobody checked
whether the results were what was asked for. "трек Adjust (BE) - Mist" came back
as 49 unrelated releases named "Mist" — Discogs' artist= param never matches a
track artist on a compilation, so the query degraded to a bare track= sweep.

- AggregatedSearchService: MusicBrainz + Discogs + Bandcamp in parallel, merged
  into one stack, deduped with a source preference (discogs > bandcamp > mb).
- ReleaseMatchValidator: a result must be the requested artist AND either the
  requested release title or carry the requested track. Compilations are
  confirmed by loading their tracklist (bounded to 8 lookups per search).
- DiscogsClient: free-text q lookup for track queries — the same index the
  website's search box uses, which covers the tracklist.
- SearchStack: a turn can now produce several independently scrollable stacks.
  exploreAndRecommend researches 3 real releases and searches each one;
  findSimilar gives one stack per related artist instead of one mixed pile.
- digDeeper re-runs the last query unvalidated (engine cycling is meaningless
  now that all three are always queried).
- Empty search reports which filters it applied so the agent can retry with
  fewer, and remembers the query without clobbering the cards on screen.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>